--- a/d3js/style.css
+++ b/d3js/style.css
@@ -88,7 +88,9 @@
   .rounded-lg {
     border-radius: 0.5rem; /* 둥근 모서리 설정 */
   }
-  
+  .search{
+    border: none;
+  }
 /* 버튼 경계 제거 */
 button {
     border: none; /* 버튼 경계 제거 */
