--- a/d3js/style.css
+++ b/d3js/style.css
@@ -1,6 +1,6 @@
 
     /* Container and Layout */
-    .container { width: 100%; max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
+    /* .container { width: 100%; max-width: 1200px; margin: 0 auto; padding: 0 1rem; } */
     .flex { display: flex; }
     .w-3\/4 { width: 75%; }
     .w-1\/4 { width: 25%; }
@@ -92,7 +92,7 @@
     border: none;
   }
 /* 버튼 경계 제거 */
-button {
+  button {
     border: none; /* 버튼 경계 제거 */
   }
 
@@ -102,7 +102,7 @@ button {
     overflow: hidden;
     width: 100%;
     height: 100%;
-}
+  }
 
 #network-svg {
     width: 100vw;
@@ -110,10 +110,11 @@ button {
     position: fixed;
     top: 0;
     left: 0;
-}
+  }
 
 #article-list {
     z-index: 1000;
-
-    overflow-y: auto;
-}
+    height: 80vh;
+    overflow-y: scroll;
+    overflow-x: scroll;
+  }
